--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +17,7 @@
         android:textColor="@color/black"
         android:textSize="17sp" />
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/header_title"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="15dp"
@@ -26,4 +27,13 @@
 
         />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/no_notifications_available"
+        android:text="No notifications available"
+        android:fontFamily="@font/rubik_regular"
+        android:layout_centerInParent="true"
+        />
+
+</RelativeLayout>
