--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -117,6 +117,37 @@
             android:layout_alignParentBottom="true"
             />
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/chatRoom"
+        android:layout_marginStart="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/rubik_regular"
+            android:text="Chat Room"
+            android:textColor="@color/dark_gray"
+            android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/chevronforward" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.8dp"
+            android:background="#747f9e"
+            android:layout_alignParentBottom="true"
+            />
+    </RelativeLayout>
 
     <TextView
         android:layout_marginTop="24dp"
